src/rules/snapshots/pg_migration_lint__rules__pgm204__tests__truncate_cascade_existing_fires.snap
---
source: src/rules/pgm204.rs
expression: findings
---
- rule_id: PGM204
  severity: Major
  message: "TRUNCATE TABLE 'customers' CASCADE silently extends to all tables with foreign key references to 'customers', and recursively to their dependents. Verify the full cascade chain is intentionally truncated."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
